--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><!--<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/andreluis.moreira.142" rel="tooltip" title="Siga-me no Facebook"><i class="fa fa-facebook"></i></a>--><a class="btn btn-default btn-round btn-lg btn-icon" href="http://www.linkedin.com/in/profissionalandremoreira" title="Siga-me no LinkedIn"><i class="fa fa-linkedin"></i> <!-- </a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Siga-me no Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Siga-me no Instagram"><i class="fa fa-instagram"></i> --></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="http://www.linkedin.com/in/profissionalandremoreira" title="Siga-me no LinkedIn"><i class="fa fa-linkedin"></i> <!-- </a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Siga-me no Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Siga-me no Instagram"><i class="fa fa-instagram"></i> --></a></div>
         </div>
       </div>
     </div>
@@ -603,3 +603,4 @@
   </body>
 
 </html>
+
