--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Administração de Redes de Computadores</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Sustentanção de infraestrutura</span>
               <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div><span class="progress-value">95%</span>
               </div> -->
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Projetos de redes</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Gestão da TI</span>
               <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 98%;"></div><span class="progress-value">98%</span>
               </div> -->
@@ -603,4 +603,5 @@
   </body>
 
 </html>
+
 
