Ocultos formulário e botão de contato

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/andre.jpeg" alt="Image"/></a></div>
           <div class="h2 title">André Moreira</div>
-          <p class="category text-white">Gestão, Governança, Segurança e Infraestrutura de TI</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contrate-me</a><a class="btn btn-primary" href="docs/Curriculum.pdf" download="Andre.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Gestão, Governança, Segurança e Infraestrutura de TI</p>
+          <!--<a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contrate-me</a>--><a class="btn btn-primary" href="docs/Curriculum.pdf" download="Andre.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -519,7 +520,7 @@
 </div>
 -->
 
-<div class="section" id="contact">
+<!--<div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
     <div class="container">
       <div class="cc-contact">
@@ -585,7 +586,7 @@
       </div>
     </div>
   </div>
-</div></div>
+</div></div>-->
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-linkedin btn btn-link " href="#"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
